--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -29,3 +29,11 @@ footer p {
 nav > ul {
     list-style: none;
 }
+
+/* Selector por elemento para <section> */
+section {
+    border: 0.2pt solid #cedddd;
+    margin: 4px 2px 8px 2px;
+    margin-bottom: 1.2rem;
+    padding: 1.5% 0.8%;
+}
